changed "Status" to "Messages" SERVER-1946